<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email_black_24dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock_black_24dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:background="@drawable/rectangle_button"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password"
            android:gravity="center"
            android:text="@string/forgot_your_password"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>

</RelativeLayout>