<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".Fragment.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:padding="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-2dp"
                android:layout_marginLeft="-8dp"
                android:text="@string/profile"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_alignTop="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-17dp"
                android:hint="@string/tap_profile_for_change"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="200dp"
                android:hint="@string/copyright"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>